src/test/ui/typeck/return_type_containing_closure.stderr
error[E0308]: mismatched types
  --> $DIR/return_type_containing_closure.rs:4:5
   |
LL |     vec!['a'].iter().map(|c| c)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found struct `Map`
   |
   = note: expected unit type `()`
                 found struct `Map<std::slice::Iter<'_, char>, ...>`
           the full type name has been written to '$TEST_BUILD_DIR/typeck/return_type_containing_closure/return_type_containing_closure.long-type-hash.txt'
help: consider using a semicolon here
   |
LL |     vec!['a'].iter().map(|c| c);
   |                                +
help: a return type might be missing here
   |
LL | fn foo() -> _ {
   |          ++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
